--- a/examples/merge_lora/chart_qwen3vl_lora_sft.yaml
+++ b/examples/merge_lora/chart_qwen3vl_lora_sft.yaml
@@ -1,7 +1,7 @@
 ### Note: DO NOT use quantized model or quantization_bit when merging lora adapters
 
 ### model
-model_name_or_path: Qwen/Qwen2.5-VL-7B-Instruct
+model_name_or_path: Qwen/Qwen3-VL-8B-Instruct
 adapter_name_or_path: /home/megantj/orcd/scratch/chartref_sft/qwen3vl/saves
 template: qwen3_vl
 trust_remote_code: true
